--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -317,30 +317,57 @@ if (onnxruntime_USE_ROCM)
     set(onnxruntime_HIPIFY_PERL ${HIPIFY_PERL_PATH}/hipify-perl)
   endif()
 
-  # replicate strategy used by pytorch to get ROCM_VERSION
-  # https://github.com/pytorch/pytorch/blob/8eb21488fdcdb8b0e6fa2e46179b5fa6c42e75af/cmake/public/LoadHIP.cmake#L153-L173
-  # file(READ "${onnxruntime_ROCM_HOME}/.info/version-dev" ROCM_VERSION_DEV_RAW)
-  # string(REGEX MATCH "^([0-9]+)\.([0-9]+)\.([0-9]+)-.*$" ROCM_VERSION_DEV_MATCH ${ROCM_VERSION_DEV_RAW})
-  # if (ROCM_VERSION_DEV_MATCH)
-  #   set(ROCM_VERSION_DEV_MAJOR ${CMAKE_MATCH_1})
-  #   set(ROCM_VERSION_DEV_MINOR ${CMAKE_MATCH_2})
-  #   set(ROCM_VERSION_DEV_PATCH ${CMAKE_MATCH_3})
-  #   set(ROCM_VERSION_DEV "${ROCM_VERSION_DEV_MAJOR}.${ROCM_VERSION_DEV_MINOR}.${ROCM_VERSION_DEV_PATCH}")
-  #   math(EXPR ROCM_VERSION_DEV_INT "(${ROCM_VERSION_DEV_MAJOR}*10000) + (${ROCM_VERSION_DEV_MINOR}*100) + ${ROCM_VERSION_DEV_PATCH}")
-  # endif()
-  message("\n***** ROCm version from ${onnxruntime_ROCM_HOME}/.info/version-dev ****\n")
-  message("ROCM_VERSION_DEV: ${ROCM_VERSION_DEV}")
-  message("ROCM_VERSION_DEV_MAJOR: ${ROCM_VERSION_DEV_MAJOR}")
-  message("ROCM_VERSION_DEV_MINOR: ${ROCM_VERSION_DEV_MINOR}")
-  message("ROCM_VERSION_DEV_PATCH: ${ROCM_VERSION_DEV_PATCH}")
-  message("ROCM_VERSION_DEV_INT:   ${ROCM_VERSION_DEV_INT}")
+  if (WIN32)
+    file(READ "${onnxruntime_ROCM_HOME}/bin/.hipVersion" HIP_VERSION_RAW)
+    string(REGEX MATCH "HIP_VERSION_MAJOR=([0-9]*)" HIP_VERSION_MAJOR_MATCH ${HIP_VERSION_RAW})
+    if (HIP_VERSION_MAJOR_MATCH)
+      set(HIP_VERSION_MAJOR ${CMAKE_MATCH_1})
+    endif()
+    string(REGEX MATCH "HIP_VERSION_MINOR=([0-9]*)" HIP_VERSION_MINOR_MATCH ${HIP_VERSION_RAW})
+    if (HIP_VERSION_MINOR_MATCH)
+      set(HIP_VERSION_MINOR ${CMAKE_MATCH_1})
+    endif()
+    string(REGEX MATCH "HIP_VERSION_PATCH=([0-9]*)" HIP_VERSION_PATCH_MATCH ${HIP_VERSION_RAW})
+    if (HIP_VERSION_PATCH_MATCH)
+      set(HIP_VERSION_PATCH ${CMAKE_MATCH_1})
+    endif()
+    if (HIP_VERSION_MAJOR_MATCH AND HIP_VERSION_MINOR_MATCH AND HIP_VERSION_PATCH_MATCH)
+      set(HIP_VERSION "${HIP_VERSION_MAJOR}.${HIP_VERSION_MINOR}.${HIP_VERSION_PATCH}")
+      math(EXPR HIP_VERSION_INT "(${HIP_VERSION_MAJOR}*10000) + (${HIP_VERSION_MINOR}*100)")
+    endif()
+    message("\n***** HIP version from ${onnxruntime_ROCM_HOME}/bin/.hipVersion ****\n")
+    message("HIP_VERSION: ${HIP_VERSION}")
+    message("HIP_VERSION_MAJOR: ${HIP_VERSION_MAJOR}")
+    message("HIP_VERSION_MINOR: ${HIP_VERSION_MINOR}")
+    message("HIP_VERSION_PATCH: ${HIP_VERSION_PATCH}")
+    message("HIP_VERSION_INT:   ${HIP_VERSION_INT}")
+    add_definitions(-DROCM_VERSION=${HIP_VERSION_INT})
+  else()
+    # replicate strategy used by pytorch to get ROCM_VERSION
+    # https://github.com/pytorch/pytorch/blob/8eb21488fdcdb8b0e6fa2e46179b5fa6c42e75af/cmake/public/LoadHIP.cmake#L153-L173
+    file(READ "${onnxruntime_ROCM_HOME}/.info/version-dev" ROCM_VERSION_DEV_RAW)
+    string(REGEX MATCH "^([0-9]+)\.([0-9]+)\.([0-9]+)-.*$" ROCM_VERSION_DEV_MATCH ${ROCM_VERSION_DEV_RAW})
+    if (ROCM_VERSION_DEV_MATCH)
+      set(ROCM_VERSION_DEV_MAJOR ${CMAKE_MATCH_1})
+      set(ROCM_VERSION_DEV_MINOR ${CMAKE_MATCH_2})
+      set(ROCM_VERSION_DEV_PATCH ${CMAKE_MATCH_3})
+      set(ROCM_VERSION_DEV "${ROCM_VERSION_DEV_MAJOR}.${ROCM_VERSION_DEV_MINOR}.${ROCM_VERSION_DEV_PATCH}")
+      math(EXPR ROCM_VERSION_DEV_INT "(${ROCM_VERSION_DEV_MAJOR}*10000) + (${ROCM_VERSION_DEV_MINOR}*100) + ${ROCM_VERSION_DEV_PATCH}")
+    endif()
+    message("\n***** ROCm version from ${onnxruntime_ROCM_HOME}/.info/version-dev ****\n")
+    message("ROCM_VERSION_DEV: ${ROCM_VERSION_DEV}")
+    message("ROCM_VERSION_DEV_MAJOR: ${ROCM_VERSION_DEV_MAJOR}")
+    message("ROCM_VERSION_DEV_MINOR: ${ROCM_VERSION_DEV_MINOR}")
+    message("ROCM_VERSION_DEV_PATCH: ${ROCM_VERSION_DEV_PATCH}")
+    message("ROCM_VERSION_DEV_INT:   ${ROCM_VERSION_DEV_INT}")
+    add_definitions(-DROCM_VERSION=${ROCM_VERSION_DEV_INT})
+  endif()
   message("\n***** HIP LANGUAGE CONFIG INFO ****\n")
   message("CMAKE_HIP_COMPILER:      ${CMAKE_HIP_COMPILER}")
   message("CMAKE_HIP_ARCHITECTURES: ${CMAKE_HIP_ARCHITECTURES}")
   message("CMAKE_HIP_FLAGS:         ${CMAKE_HIP_FLAGS}")
   string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
   message("CMAKE_HIP_FLAGS_${BUILD_TYPE}: ${CMAKE_HIP_FLAGS_${BUILD_TYPE}}")
-  add_definitions(-DROCM_VERSION=${ROCM_VERSION_DEV_INT})
 
   if (onnxruntime_USE_COMPOSABLE_KERNEL AND ROCM_VERSION_DEV VERSION_LESS "5.3")
     message(WARNING "composable kernel is only supported on ROCm >= 5.3")
